# bird-bard

./: README.md
birdbard-backend/: .gitignore  README.md  pyproject.toml  requirements.txt
birdbard-backend/src/: schema.py
birdbard-backend/src/topic_modelling/: bertopic_play.py  make_embeddings.py  openai_utils.py  prep_archive.py  tests.py  topic_groups.py  tz_utils.py  viz.py
birdbard-backend/src/toy-bird-bard/: load-thread.py
birdbard-backend/src/twitter_archive_to_db/: api_v1.py  archive_api_lookup.py  archive_utils.py  manipulate_archive_files.py  pg_db_import.py  surreal_db_import.py
birdbard-backend/src/vector_search/: pinecone_utils.py  populate_pinecone.py  query_pinecone.py  vector_search_utils.py
birdbard-ui/: package.json
